Ajouter la vm asterisk à la liste des hosts

--- a/ansible/install_cockpit_webmin.yml
+++ b/ansible/install_cockpit_webmin.yml
@@ -1,7 +1,7 @@
 ---
 - name: Setup Cockpit and Webmin on all hosts
   hosts: all
-  # hosts: "dhcp:dns:nas:ntp:snort:nagios"
+  # hosts: "dhcp:dns:nas:ntp:snort:nagios:asterisk"
   become: true
   tasks:
   - name: Install Cockpit package
