--- a/ansible/install_nagios.yml
+++ b/ansible/install_nagios.yml
@@ -5,7 +5,7 @@
   roles:
     - nagios
 - name: Setup NRPE on all hosts
-  hosts: "dhcp:dns:nas:ntp:snort:nagios"
+  hosts: "dhcp:dns:nas:ntp:snort:nagios:asterisk"
   become: true
   roles:
     - nagios-nrpe
