--- a/server/vagrantfile
+++ b/server/vagrantfile
@@ -104,8 +104,8 @@ Vagrant.configure("2") do |config|
   config.vm.define "pfsense" do |node|
     # node.vm.box = "xenomii/pfsense-2.6.0" #KO vbgeust problem , must relaunch UP        
     # node.vm.box = "gutobrutus/pfsense2.6.0" #KO vbgeust problem , must relaunch UP
-        # node.vm.box = "madinasoc2030/pfsense"  #KO vbgeust problem , must relaunch UP
-    node.vm.box = "ksklareski/pfsense-ce" #OK
+    # node.vm.box = "ksklareski/pfsense-ce" #OK NO GUI Update
+    node.vm.box = "madinasoc2030/pfsense"  #KO vbgeust problem , must relaunch UP
     node.ssh.shell = 'sh'
     # node.ssh.insert_key = false
     node.vm.hostname = "pfsense"
