--- a/server/vagrantfile
+++ b/server/vagrantfile
@@ -105,7 +105,8 @@ Vagrant.configure("2") do |config|
     # node.vm.box = "xenomii/pfsense-2.6.0" #KO vbgeust problem , must relaunch UP        
     # node.vm.box = "gutobrutus/pfsense2.6.0" #KO vbgeust problem , must relaunch UP
     # node.vm.box = "ksklareski/pfsense-ce" #OK NO GUI Update
-    node.vm.box = "madinasoc2030/pfsense"  #KO vbgeust problem , must relaunch UP
+    # node.vm.box = "madinasoc2030/pfsense"  #KO vbgeust problem , must relaunch UP
+    node.vm.box = "hichemlamine/pfsense-2.7.2"
     node.ssh.shell = 'sh'
     # node.ssh.insert_key = false
     node.vm.hostname = "pfsense"
