Add html web interface page for all web interfaces in the project

--- a/ansible/roles/nagios/tasks/main.yml
+++ b/ansible/roles/nagios/tasks/main.yml
@@ -77,7 +77,8 @@
   ansible.builtin.replace:
     path: /usr/local/nagios/etc/objects/contacts.cfg
     regexp: '    email\s+.*;.*$'
-    replace: '    email                  devops6080@gmail.com ;'
+    # replace: '    email                  devops6080@gmail.com ;'
+    replace: '    email                  chebil.fadhel@gmail.com ;'
 
 - name: Configure Nagios hosts in hosts.cfg file
   template:
