--- a/server/vagrantfile
+++ b/server/vagrantfile
@@ -2,6 +2,7 @@ Vagrant.configure("2") do |config|
 
   # Configuration de la box CentOS 8
   config.vm.box = "centos/8"
+  # config.vm.box = "hichemlamine/centos8"
   # config.ssh.private_key_path = "~/.ssh/id_rsa"
 
   # Provisionnement personnalisé pour ajouter la clé publique à authorized_keys
