--- a/ansible/install_config.yml
+++ b/ansible/install_config.yml
@@ -61,6 +61,7 @@
         - net-tools
         - bind-utils
         - nmap
+        - ftp
       state: present
 
   # - name: Fix ssh problem on restart 
