--- a/ansible/install_config.yml
+++ b/ansible/install_config.yml
@@ -1,3 +1,5 @@
+# This playbook is usedif you use centos/8 box to let you use yum/dnf and updates
+# If you use hichemlamine/centos-8 instead this will damage your host, please do not use, only with centos/8 box
 - hosts: all
   become: true
   tasks:
@@ -7,10 +9,14 @@
       sudo sed -i 's/mirrorlist/#mirrorlist/g' /etc/yum.repos.d/CentOS-*
       sudo sed -i 's|#baseurl=http://mirror.centos.org|baseurl=http://vault.centos.org|g' /etc/yum.repos.d/CentOS-*
 
-      # wget 'http://mirror.centos.org/centos/8-stream/BaseOS/x86_64/os/Packages/centos-gpg-keys-8-3.el8.noarch.rpm'
-      # sudo rpm -i 'centos-gpg-keys-8-3.el8.noarch.rpm'
-      # sudo dnf --disablerepo '*' --enablerepo=extras swap centos-linux-repos centos-stream-repos 
-      # sudo dnf distro-sync
+#       # sudo sed -i 's/mirrorlist/#mirrorlist/g' /etc/yum.repos.d/CentOS-Linux-*
+#       # sudo sed -i 's|#baseurl=http://mirror.centos.org|baseurl=http://vault.centos.org|g' /etc/yum.repos.d/CentOS-Linux-*
+#       # sudo dnf update
+#       # sudo dnf install centos-release-stream
+#       # sudo dnf swap centos-linux-repos centos-stream-repos
+#       # sudo dnf distro-sync
+#       # sudo dnf update
+
 
 - hosts: all
   become: true
@@ -62,17 +68,5 @@
         - bind-utils
         - nmap
         - ftp
+        - vsftpd
       state: present
-
-  # - name: Fix ssh problem on restart 
-  #   ansible.builtin.shell: |
-  #     sudo dnf -y install centos-release-stream
-  #     sudo dnf -y swap centos-{linux,stream}-repos
-  #     sudo dnf -y distro-sync
-  #     sudo dnf install https://dl.fedoraproject.org/pub/epel/epel-release-latest-8.noarch.rpm
-  #     sudo dnf -y install https://rpms.remirepo.net/enterprise/remi-release-8.rpm
-  #     sudo dnf -y install yum-utils
-  #     sudo dnf module reset php -y
-  #     sudo dnf module enable php:remi-8.3 -y
-  #     sudo dnf update -y  #sudo dnf update -y --skip-broken --allowerasing
-  #     sudo dnf install php -y
